OO-3286: adapt task, participant folder and check list course elements to curriculum coaches and participants and assessment tool